# listmanager_c

./: .gitignore  CMakeLists.txt  Common.h  Dbase.cpp  Dbase.h  Editor.cpp  Editor.h  LSP.cpp  Makefile  Organizer.cpp  Organizer.h  README.md  activate  base64.hpp  call_solr.c  cmdorg.cpp  cmdorg.h  common.h  create_fts5_db.ipynb  dbase.cpp  dbase.h  dbfunc.cpp  editor.cpp  editor.h  editor_function_map.h  editorfuncmap.h  highlight.css  listman.cpp  listman.h  listmanager.c  listmanager.h  listmanager_1.c  listmanager_2.c  listmanager_3.c  listmanager_commands  listmanager_term.c  listmanager_term_improved  listmanager_term_improved.c  listmanager_term_improved.cpp  listmanager_term_improved_more.c  (+27 more)
assets/: github-markdown.css  meta.html  ui.html  ui.js
assets/highlight/: highlight.pack.js
